Fixed spacing of labels

--- a/htdocs/chart.css
+++ b/htdocs/chart.css
@@ -54,9 +54,9 @@
         -ms-transform-origin: 0 100%;
          -o-transform-origin: 0 100%;
             transform-origin: 0 100%;
-    -webkit-transform: rotate(90deg);
-       -moz-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-         -o-transform: rotate(90deg);
-            transform: rotate(90deg);
+    -webkit-transform: rotate(90deg) translateY(-9pt);
+       -moz-transform: rotate(90deg) translateY(-9pt);
+        -ms-transform: rotate(90deg) translateY(-9pt);
+         -o-transform: rotate(90deg) translateY(-9pt);
+            transform: rotate(90deg) translateY(-9pt);
 }
